--- a/package.json
+++ b/package.json
@@ -14,19 +14,18 @@
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.1.2",
-    "@astrojs/image": "^0.11.0",
     "@astrojs/mdx": "^0.11.5",
-    "@astrojs/tailwind": "^2.1.1",
+    "@astrojs/tailwind": "^2.1.3",
     "@fontsource/inter": "^4.5.14",
     "@types/alpinejs": "^3.0.0",
     "alpinejs": "^3.0.0",
-    "astro": "^1.6.0",
+    "astro": "^3.3.0",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^0.8.0",
     "astro-seo": "^0.6.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.7"
+    "@tailwindcss/typography": "github:tailwindcss/typography"
   }
 }
