--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.1.2",
+    "@astrojs/image": "^0.11.0",
     "@astrojs/mdx": "^0.11.5",
-    "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/tailwind": "^5.0.2",
     "@fontsource/inter": "^4.5.14",
     "@types/alpinejs": "^3.0.0",
     "alpinejs": "^3.0.0",
@@ -26,6 +27,6 @@
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "github:tailwindcss/typography"
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
